@@ -3,6 +3,8 @@
 	* lib/rubygems/indexer.rb:  Fix quick_index generation.
 	* lib/rubygems/specification.rb:  Correctly guard new spec features
 	for older RubyGems.
+	* lib/rubygems/config_file.rb:  Add system-wide config file
+	(/etc/gemrc).  Patch #14723 by Phil Hagelberg.
 
 2008-06-15  Eric Hodel  <drbrain@segment7.net>
 
